--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="site-footer">
   <div class="row">
     <div class="small-6 columns">
-      {{ site.name }} © 2015
+      {{ site.nickname }} © 2015
     </div>
     <div class="small-6 columns" >
       Email: <a href="mailto:{{ site.email }}">{{ site.email }}</a>
