--- a/_sass/foundation/components/_global.scss
+++ b/_sass/foundation/components/_global.scss
@@ -408,7 +408,7 @@ $cursor-text-value: text !default;
   a:hover { cursor: $cursor-pointer-value; }
 
     // Grid Defaults to get images and embeds to work properly
-    img { max-width: 100%; height: auto; }
+    img { height: auto; }
 
     img { -ms-interpolation-mode: bicubic; }
 
