--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name=viewport content="width=device-width, initial-scale=1">
-  
+
   <title>{% if page.title %}{{ page.title }} | {{ site.name }}{% else %}{{ site.name }}{% endif %}</title>
   {% if site.author %}
     <meta name="author" content="{{ site.author }}">
@@ -14,12 +14,13 @@
   {%else%}
     <meta name="keywords" content="{{ site.keywords }}">
   {% endif %}
-    
+
   <link href="{{ site.baseurl }}/css/main.css" media="screen, projection" rel="stylesheet" type="text/css">
   <link rel="canonical" href="{{ site.baseurl }}{{ page.url }}">
   <link href="{{ site.baseurl }}/favicon.ico" rel="icon">
   <link rel="alternate" type="application/atom+xml" title="{{ site.name }}" href="{{ site.baseurl }}/atom.xml"/>
-  
+
   {% include metadata.html %}
-  {% include google_analytics.html %} 
+  {% include og.html %}
+  {% include google_analytics.html %}
 </head>
